exports[`Layout renders no transactions if there are none and ready 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Giving History" />
<Right background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/_fpo/NScollege-cip-0033_1700_1133_90_c1.jpg" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<div className="soft-double-sides@lap-and-up soft-ends@lap-and-up background--light-primary">
<div className="soft soft-double-ends hard-left@lap-and-up">
<h2 className="flush hard">
Giving History
</h2>
</div>
</div>
<Filter family={{...}} changeFamily={[Function]} changeDates={[Function]} />
<div className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
<div className="text-left soft-ends soft-half-sides">
<p>
We didn&#39;t find any contributions associated with your account. If you would like to start giving, click 
<Link to="/give/now" onlyActiveOnIndex={false} style={{...}}>
here
</Link>
</p>
<p>
<em>
If you have any questions, please call our Finance Team at 864-965-9990 or 
<a rel="noopener noreferrer" target="_blank" href="//rock.newspring.cc/workflows/152?Topic=Stewardship">
contact us 
</a>
 and someone will be happy to assist you.
</em>
</p>
</div>
</div>
<div className="one-whole text-center" />
</Left>
</div>
`;

exports[`Layout renders reloading if no transactions and not ready 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Giving History" />
<Right background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/_fpo/NScollege-cip-0033_1700_1133_90_c1.jpg" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<div className="soft-double-sides@lap-and-up soft-ends@lap-and-up background--light-primary">
<div className="soft soft-double-ends hard-left@lap-and-up">
<h2 className="flush hard">
Giving History
</h2>
</div>
</div>
<Filter family={{...}} changeFamily={[Function]} changeDates={[Function]} />
<div className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
<div className="text-center soft">
<Spinner styles={{...}} />
</div>
</div>
<div className="one-whole text-center" />
</Left>
</div>
`;

exports[`Layout renders reloading version 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Giving History" />
<Right background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/_fpo/NScollege-cip-0033_1700_1133_90_c1.jpg" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<div className="soft-double-sides@lap-and-up soft-ends@lap-and-up background--light-primary">
<div className="soft soft-double-ends hard-left@lap-and-up">
<h2 className="flush hard">
Giving History
</h2>
</div>
</div>
<Filter family={{...}} changeFamily={[Function]} changeDates={[Function]} />
<div className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
<div className="text-center soft">
<Spinner styles={{...}} />
</div>
</div>
<div className="one-whole text-center" />
</Left>
</div>
`;

exports[`Layout renders with negative transactions 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Giving History" />
<Right background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/_fpo/NScollege-cip-0033_1700_1133_90_c1.jpg" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<div className="soft-double-sides@lap-and-up soft-ends@lap-and-up background--light-primary">
<div className="soft soft-double-ends hard-left@lap-and-up">
<h2 className="flush hard">
Giving History
</h2>
</div>
</div>
<Filter family={{...}} changeFamily={[Function]} changeDates={[Function]} />
<div className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
<div>
<div>
<div>
<div className="soft soft-half-left text-left">
<h5>
2012
</h5>
</div>
<TransactionCard transaction={{...}} transactionDetail={{...}} person={[undefined]} />
</div>
</div>
<div>
<TransactionCard transaction={{...}} transactionDetail={{...}} person={[undefined]} />
<TransactionCard transaction={{...}} transactionDetail={{...}} person={[undefined]} />
</div>
</div>
</div>
<div className="one-whole text-center">
<mockConstructor />
</div>
</Left>
</div>
`;

exports[`Layout renders with props 1`] = `
<div>
<Connect(SplitContainerWithoutData) nav={true} classes={{...}}>
<Meta title="Giving History" />
<Right background="//dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/newspring/_fpo/NScollege-cip-0033_1700_1133_90_c1.jpg" mobile={false} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<div className="soft-double-sides@lap-and-up soft-ends@lap-and-up background--light-primary">
<div className="soft soft-double-ends hard-left@lap-and-up">
<h2 className="flush hard">
Giving History
</h2>
</div>
</div>
<Filter family={{...}} changeFamily={[Function]} changeDates={[Function]} />
<div className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
<div>
<div>
<div>
<div className="soft soft-half-left text-left">
<h5>
2012
</h5>
</div>
<TransactionCard transaction={{...}} transactionDetail={{...}} person={[undefined]} />
</div>
<TransactionCard transaction={{...}} transactionDetail={{...}} person={[undefined]} />
</div>
<div>
<TransactionCard transaction={{...}} transactionDetail={{...}} person={[undefined]} />
<TransactionCard transaction={{...}} transactionDetail={{...}} person={[undefined]} />
</div>
</div>
</div>
<div className="one-whole text-center">
<mockConstructor />
</div>
</Left>
</div>
`;

exports[`TransactionCard renders failed version 1`] = `
<div className="soft card">
<TransactionDetail transactionDetail={{...}} transaction={{...}} icon={false} status="Failed to Process" failure={true} person={{...}} />
<p className="flush-bottom soft-top" style={{...}}>
<small>
<em>
For more information about why this contribution failed to process, please contact our Finance Team at 
<a href="tel:864-965-9990">
864-965-9990
</a>
 or 
<a rel="noopener noreferrer" target="_blank" href="//rock.newspring.cc/workflows/152?Topic=Stewardship">
contact us
</a>
</em>
</small>
</p>
</div>
`;

exports[`TransactionCard renders pending version 1`] = `
<div className="soft card" style={{...}}>
<TransactionDetail transactionDetail={{...}} transaction={{...}} icon={false} status="Pending" person={{...}} />
</div>
`;

exports[`TransactionCard renders with props 1`] = `
<div className="soft card">
<Link to="/give/history/1" onlyActiveOnIndex={false} style={{...}}>
<TransactionDetail transactionDetail={{...}} transaction={{...}} icon={true} person={{...}} />
</Link>
</div>
`;

exports[`TransactionDetail renders with failure 1`] = `
<div className="grid" style={{...}}>
<div className="grid__item three-fifths" style={{...}}>
<div className="relative">
<div className="background--fill soft visuallyhidden@palm float-left round push-half-top" style={{...}} />
<div className="soft-double-left@palm-wide-and-up push-left@palm-wide-and-up">
<h5 className="text-dark-secondary flush" style={{...}}>
account name
</h5>
<h6 className="text-dark-tertiary soft-half-bottom flush">
jim
 
bob
</h6>
<p className="flush italic small text-alert">
Dec 12, 2012
</p>
</div>
</div>
</div>
<div className="grid__item two-fifths text-right" style={{...}}>
<div className="soft-half-right">
<h4 className="text-dark-tertiary one-whole flush soft-right@handheld soft-double-right@lap-and-up" style={{...}}>
$2
<span className="text-primary icon-arrow-next locked" style={{...}} />
</h4>
</div>
</div>
</div>
`;

exports[`TransactionDetail renders with failure and status 1`] = `
<div className="grid" style={{...}}>
<div className="grid__item three-fifths" style={{...}}>
<div className="relative">
<div className="background--fill soft visuallyhidden@palm float-left round push-half-top" style={{...}} />
<div className="soft-double-left@palm-wide-and-up push-left@palm-wide-and-up">
<h5 className="text-dark-secondary flush" style={{...}}>
account name
</h5>
<h6 className="text-dark-tertiary soft-half-bottom flush">
jim
 
bob
</h6>
<p className="flush italic small text-alert">
error - 
Dec 12, 2012
</p>
</div>
</div>
</div>
<div className="grid__item two-fifths text-right" style={{...}}>
<div className="soft-half-right">
<h4 className="text-dark-tertiary one-whole flush soft-right@handheld soft-double-right@lap-and-up" style={{...}}>
$2
<span className="text-primary icon-arrow-next locked" style={{...}} />
</h4>
</div>
</div>
</div>
`;

exports[`TransactionDetail renders with props 1`] = `
<div className="grid" style={{...}}>
<div className="grid__item three-fifths" style={{...}}>
<div className="relative">
<div className="background--fill soft visuallyhidden@palm float-left round push-half-top" style={{...}} />
<div className="soft-double-left@palm-wide-and-up push-left@palm-wide-and-up">
<h5 className="text-dark-secondary flush" style={{...}}>
account name
</h5>
<h6 className="text-dark-tertiary soft-half-bottom flush">
jim
 
bob
</h6>
<p className="flush italic small text-dark-tertiary">
Dec 12, 2012
</p>
</div>
</div>
</div>
<div className="grid__item two-fifths text-right" style={{...}}>
<div className="soft-half-right">
<h4 className="text-dark-tertiary one-whole flush soft-right@handheld soft-double-right@lap-and-up" style={{...}}>
$2
<span className="text-primary icon-arrow-next locked" style={{...}} />
</h4>
</div>
</div>
</div>
`;

exports[`TransactionDetail renders without icon 1`] = `
<div className="grid" style={{...}}>
<div className="grid__item three-fifths" style={{...}}>
<div className="relative">
<div className="background--fill soft visuallyhidden@palm float-left round push-half-top" style={{...}} />
<div className="soft-double-left@palm-wide-and-up push-left@palm-wide-and-up">
<h5 className="text-dark-secondary flush" style={{...}}>
account name
</h5>
<h6 className="text-dark-tertiary soft-half-bottom flush">
jim
 
bob
</h6>
<p className="flush italic small text-dark-tertiary">
Dec 12, 2012
</p>
</div>
</div>
</div>
<div className="grid__item two-fifths text-right" style={{...}}>
<div className="soft-half-right">
<h4 className="text-dark-tertiary one-whole flush soft-right@handheld soft-double-right@lap-and-up" style={{...}}>
$2
</h4>
</div>
</div>
</div>
`;
